setup javafx / implement UI for creating new user